2011-03-10  David Cote  <david.cote@cern.ch>
	* Changed rec.AutoConfiguration default to 'everything' in CommonSkeletonJobOptions.py
	* Moved doESD.lock() below preExec in skeleton.MergePool.py
 	* tagging  PATJobTransforms-00-03-18

2011-03-08 Andrea Di Simone <andrea.di.simone@cern.ch>
	* scripts/Reco_trf.py (ListOfDefaultPositionalKeys): adding outputNTUP_HSG2File outputNTUP_2LHSG2File outputDAOD_HSG2File
	* Added NTUP_HSG2 NTUP_2LHSG2 DAOD_HSG2 in Configuration.py
	* Added  NTUP_HSG2 NTUP_2LHSG2 DAOD_HSG2 in share/skeleton.AODtoDPD_trf.py
 	* tagging  PATJobTransforms-00-03-17

2011-03-03  David Cote  <david.cote@cern.ch>
	* Added NTUP_PHOTON to ProdSys ListOfDefaultPositionalKeys in Reco_trf
	* tagging PATJobTransforms-00-03-16

2011-03-09 Susumu Oda <Susumu.Oda@cern.ch>
	* Add 'r2e' to AddOutputNTUP_SCTFile.subSteps of python/Configuration.py
	  (requested by Yuriy Pylypchenko)
	* tagging PATJobTransforms-00-03-15  

2011-03-04 Walter Lampl <walter.lampl@ cern.ch>
	* Add new output file: outputNUTP_FASTMONFile for Fast Physics Monitoring 
	  + necessary modification to AOD->DPD skeleton
	* tagging PATJobTransforms-00-03-14

2011-03-03  David Cote  <david.cote@cern.ch>
	* Added outputNTUP_L1CALOPROBFile and outputNTUP_L1CALOFile to ProdSys ListOfDefaultPositionalKeys
	* tagging PATJobTransforms-00-03-13

2011-03-03  John Chapman  <John.Chapman@cern.ch>
	* scripts/Merging_trf.py - added outputHitsFile to ListOfDefaultPositionalKeys.
	* tagging PATJobTransforms-00-03-12

2011-03-03  David Cote  <david.cote@cern.ch>
	* Added --uploadtoami arg in Configuration.py
	* Fixed syntax error in include("TrigCostAthena/ESDtoNTUP_ENHBIAS.py")
	* Tagging as PATJobTransforms-00-03-11

2011-02-25 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Fixed a small inconsistency between skeleton.AODtoDPD_trf.py
	  and skeleton.ESDtoDPD_trf.py. (Had to modify the ESD one.)
	* Tagging as PATJobTransforms-00-03-10

2011-02-25  David Cote  <david.cote@cern.ch>